<?xml version="1.0" encoding="utf-8"?>

<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/ethnic_radio_group"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="16sp"
        android:textColor="@color/primary"
        android:text="@string/what_is_your_ethnic_groups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/white_ethnic"
        android:text="@string/white"
        android:hint="@string/white_ethnic_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/mixed_ethnic"
        android:text="@string/mixed"
        android:hint="@string/mixed_ethnic_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/asian_ethnic"
        android:text="@string/asian"
        android:hint="@string/asian_ethnic_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/african_ethnic"
        android:text="@string/african"
        android:hint="@string/african_ethnic_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/caribbean_ethnic"
        android:text="@string/caribbean"
        android:hint="@string/caribbean_ethnic_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/other_ethnic"
        android:text="@string/other_ethnic"
        android:hint="@string/other_ethnic_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RadioGroup>