<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">

    <TableRow
        android:id="@+id/firstRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_weight="1"
            android:id="@+id/day0Checkbox"
            app:buttonTint="@color/primary"
            android:text="@string/day0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_weight="1"
            android:id="@+id/day1Checkbox"
            app:buttonTint="@color/primary"
            android:text="@string/day1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow
        android:id="@+id/secondRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_weight="1"
            android:id="@+id/day2Checkbox"
            app:buttonTint="@color/primary"
            android:text="@string/day3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_weight="1"
            android:id="@+id/day3Checkbox"
            app:buttonTint="@color/primary"
            android:text="@string/day4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow
        android:id="@+id/thirdRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_weight="1"
            android:id="@+id/day4Checkbox"
            android:text="@string/day5"
            app:buttonTint="@color/primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_weight="1"
            android:id="@+id/day5Checkbox"
            android:text="@string/day6"
            android:layout_width="wrap_content"
            app:buttonTint="@color/primary"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow
        android:id="@+id/fourthRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_weight="1"
            android:id="@+id/day6Checkbox"
            app:buttonTint="@color/primary"
            android:text="@string/day7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>

</TableLayout>