<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.signin.SignUpActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            app:title="@string/app_name"
            app:subtitle="@string/signUpPageTitle"
            app:titleTextColor="@color/white"
            app:subtitleTextColor="@color/white"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" >
        <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:layout_width="match_parent"
                android:background="@drawable/edit_text_shape"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" >
            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:layout_width="match_parent"
                android:background="@drawable/edit_text_shape"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:endIconMode="password_toggle"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:background="@drawable/edit_text_shape"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:endIconMode="password_toggle"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:id="@+id/password_confirm_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:background="@drawable/edit_text_shape"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/age"
            android:inputType="number"
            android:id="@+id/age_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:background="@drawable/edit_text_shape"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/spinner_background_style"
            android:id="@+id/genderPicker"
            android:layout_width="match_parent"
            android:spinnerMode="dialog"
            android:layout_height="wrap_content" />

        <View
            android:layout_height="40dp" android:layout_width="0dp"/>

        <include layout="@layout/ethnic_layout" android:id="@+id/ethnic_groups"/>


        <View
            android:layout_height="40dp" android:layout_width="0dp"/>
        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:textColor="@color/primary"
            android:text="@string/choose_your_workdays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <include layout="@layout/week_days_checkboxes" android:id="@+id/week_days_checkboxes"/>
        <include layout="@layout/times_pick_layout" android:id="@+id/times_pick_layout"/>

<!--        <com.google.android.material.checkbox.MaterialCheckBox-->
<!--            android:id="@+id/accept_terms_checkbox"-->
<!--            android:text="@string/accept_our_terms_and_conditions"-->
<!--            android:layout_marginStart="16dp"-->
<!--            app:buttonTint="@color/primary"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"/>-->

        <Button
            android:id="@+id/submit_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:backgroundTint="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_add_circle_24"
            app:iconGravity="textStart"
            app:iconSize="18dp"
            app:iconPadding="8dp"
            app:iconTint="@color/white"/>

    </LinearLayout>
</ScrollView>